Make sure more elements works. Increased z-index to make context-menu visible when inside an iframe [HFJ-996]

--- a/styles/context-menu.css
+++ b/styles/context-menu.css
@@ -4,11 +4,11 @@
   height: 36px;
   margin-top: -51px;
   position: absolute;
-  z-index: 50;
   border: 1px solid #0099ff;
   line-height: 36px;
   -webkit-filter: drop-shadow(0px 0px 0.25em #2c2c2c);
   filter: drop-shadow(16px 16px 10px rgba(0,0,0,0.9));
+  z-index: 100;
 }
 
 .h5p-dragnbar-context-menu.left-aligned {
